// Copyright 2019 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package GreetModel;

// The greeting service definition.
service GrpcGreeter {

	// Sends a greeting
	rpc SayHello (HelloRequest) 
	returns (HelloReply);

	// Subscribe to receive data about the position of rectangles
	rpc SubscribeRectPositionReply (EmptyRequest)
	returns (stream PositionRectReplyEx);
}

// The request message empty
message EmptyRequest {
}

// The response message empty
message EmptyReply {
}

// The request message containing the user's name.
message HelloRequest {
	string name = 1;
}

// The response message containing the greetings
message HelloReply {
	string message = 1;
}

message PositionRectReply {	
	int32 number = 1;
	int32 x = 2;
    int32 y = 3;
	int32 w = 4;
	int32 h = 5;
}

message PositionRectReplyEx {	
	repeated PositionRectReply positionRects = 1;
}
